<resources>
    <string name="app_name">SimplePX</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_url">https://500px.com/signup</string>
    <string name="email_username">Email or Username</string>
    <string name="longin_empty">%1$s is empty.</string>
    <string name="password">Password</string>
    <string name="logout">Log out</string>
    <string name="settings">Settings</string>
    <string name="incorrectPass">Username and password don\'t match</string>

    <string name="flow">Flow</string>
    <string name="editor">Editors\' Choice</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="fresh">Fresh</string>
</resources>
