<?xml version="1.0" encoding="utf-8"?>
<com.yksong.px.view.LoginView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cover"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginControl"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="20dp"
                android:text="@string/app_name"/>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:dividerPadding="5dp">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="250dp"
                    android:id="@+id/email_username"
                    android:hint="@string/email_username"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:inputType="text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="250dp"
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/error_message"
                android:text="Error message"
                android:padding="2dp"
                android:textColor="@color/error"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginButton"
                    android:text="@string/login"/>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/progressBar"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/sign_up"
            android:id="@+id/signUp"/>
    </RelativeLayout>

</com.yksong.px.view.LoginView>